==> borgel/sympetrum-v2/Firmware/DiscoBoard-Test/Sympetrum-DiscoBoardTest/Src/rc5_encode.c <==
#include "main.h"
#include "rc5_encode.h"
#include "ir_decode.h"
#include "iprintf.h"
#include "stm32f0xx.h"
#include "stm32f0xx_it.h"
#include "stm32f0xx_hal.h"
#include "stm32f0xx_hal_tim.h"
#include <stdint.h>
#define  RC5HIGHSTATE     ((uint8_t )0x02)   /* RC5 high level definition*/
#define  RC5LOWSTATE      ((uint8_t )0x01)   /* RC5 low level definition*/

void RC5_Encode_Init(void)
{

   MX_TIM17_Init();
   MX_TIM16_Init();

   /*
   //FIXME TODO disable each?
   HAL_StatusTypeDef res;

   //res = HAL_TIM_PWM_Start(&htim17, 1);
   //2nd param is u32 channel
   //res = HAL_TIM_PWM_Stop(&htim17, 1);
   if(res != HAL_OK) {
      iprintf("Failed to stop TIM17 CH1 after init\r\n");
   }
   res = HAL_TIM_PWM_Stop(&htim16, 1);
   if(res != HAL_OK) {
      iprintf("Failed to stop TIM16 CH1 after init\r\n");
   }
   */
}

void RC5_Encode_SendFrame(uint8_t RC5_Address, uint8_t RC5_Instruction, RC5_Ctrl_TypeDef RC5_Ctrl)
{
  HAL_StatusTypeDef res;
  uint16_t RC5_FrameBinaryFormat = 0;

  /* Generate a binary format of the Frame */
  RC5_FrameBinaryFormat = RC5_BinFrameGeneration(RC5_Address, RC5_Instruction, RC5_Ctrl);

  /* Generate a Manchester format of the Frame */
  RC5_FrameManchestarFormat = RC5_ManchesterConvert(RC5_FrameBinaryFormat);

  /* Set the Send operation Ready flag to indicate that the frame is ready to be sent */
  Send_Operation_Ready = 1;

  //start the bit clock. Each edge it will send data on its own
  res = HAL_TIM_Base_Start_IT(&htim16);
  if(res != HAL_OK) {
     iprintf("Failed to start TIM16 CH1 to send\r\n");
  }
}

void RC5_Encode_SignalGenerate(void)
{
  uint8_t bit_msg = 0;

  if((Send_Operation_Ready == 1) && (BitsSent_Counter <= (RC5_GlobalFrameLength * 2)))
  {
    Send_Operation_Completed = 0x00;
    bit_msg = (uint8_t)((RC5_FrameManchestarFormat >> BitsSent_Counter)& 1);

    if (bit_msg== 1)
    {
       //enable the data out clock
       HAL_TIM_PWM_Start(&htim17, TIM_CHANNEL_1);

       /*
       //FIXME rm, play out a GPIO for testing
       if(GPIO_PIN_RESET == HAL_GPIO_ReadPin(LD3_GPIO_Port, LD3_Pin)) {
         HAL_GPIO_WritePin(LD3_GPIO_Port, LD3_Pin, GPIO_PIN_SET);
       }
       */
       if(GPIO_PIN_SET == HAL_GPIO_ReadPin(LD3_GPIO_Port, LD3_Pin)) {
          HAL_GPIO_WritePin(LD3_GPIO_Port, LD3_Pin, GPIO_PIN_RESET);
       }
    }
    else
    {
       //FIXME rm, play out a GPIO for testing
       HAL_TIM_PWM_Stop(&htim17, TIM_CHANNEL_1);

       /*
       //FIXME rm
       if(GPIO_PIN_SET == HAL_GPIO_ReadPin(LD3_GPIO_Port, LD3_Pin)) {
          HAL_GPIO_WritePin(LD3_GPIO_Port, LD3_Pin, GPIO_PIN_RESET);
       }
       */
       if(GPIO_PIN_RESET == HAL_GPIO_ReadPin(LD3_GPIO_Port, LD3_Pin)) {
         HAL_GPIO_WritePin(LD3_GPIO_Port, LD3_Pin, GPIO_PIN_SET);
       }
    }
    BitsSent_Counter++;

    //restart timer to count to next bit edge
    HAL_TIM_Base_Start_IT(&htim16);
  }
  else
  {
    Send_Operation_Completed = 0x01;

   HAL_StatusTypeDef res;

   res = HAL_TIM_Base_Stop_IT(&htim16);
   if(res != HAL_OK) {
      iprintf("Failed to stop TIM16 after sending message\r\n");
   }

   //force TIM17's output low so it never accidentally idles high after sending
   HAL_GPIO_WritePin(GPIOA, GPIO_PIN_7, GPIO_PIN_RESET);

   Send_Operation_Ready = 0;
   BitsSent_Counter = 0;
  }
}
